5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1637_1053.log
== TEST (2019-04-09 10:28:06) 
-- CODE:
patrono=input("qual é nome do patrono: ")

if(patrono.lower()=="cervo")
	print("cervo eh patrono do Harry Potter")

else:
	print(patrono.lower(),"nao eh patrono do Harry Potter")
-- ERROR:
File "XXXX", line 3
    if(patrono.lower()=="cervo")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:14) 
-- CODE:
patrono=input("qual é nome do patrono: ")

if(patrono.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")

else:
	print(patrono.lower(),"nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:47) 
-- CODE:
patrono=input("qual e nome do patrono: ")

if(patrono.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")

else:
	print(patrono.lower(),"nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:29:10) 
-- CODE:
patrono=input("qual e nome do patrono: ")

if(patrono.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")

else:
	print(patrono.lower(),"nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.115845
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
